--- a/Projrct1/pom.xml
+++ b/Projrct1/pom.xml
@@ -23,10 +23,31 @@
 
 <!-- https://mvnrepository.com/artifact/junit/junit -->
 <dependency>
-    <groupId>junit</groupId>
+    <groupId>junit</groupId> 
     <artifactId>junit</artifactId>
     <version>4.10</version>
     <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>6.7.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
+<dependency>
+    <groupId>info.cukes</groupId>
+    <artifactId>cucumber-junit</artifactId>
+    <version>1.2.5</version>
+    <scope>test</scope>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>6.9.0</version>
 </dependency>
 
 
